--- a/main.html
+++ b/main.html
@@ -3,11 +3,95 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+
+		
+		<h1 style="text-align:center;">Internship Form</h1>
+<form class="needs-validation was-validated form-control" >
+		<div class="row">
+			
+			<div class="form-label col"  >
+				<label type="text" for="first-name-input"  class="form-label"  >First Name</label>
+				<input type="text" id="first-name-input"  class="form-control" placeholder="first name" aria-label="Username" required>
+				<div class="invalid-feedback" >First name required!</div>
+			</div>
+
+
+		<div class="last-name-input col" >
+			<label class="form-label" for="last-name-input">Last Name</label>
+			<input type="text" id="last-name-input" class="form-control" placeholder="Username" aria-label="Username" required id="validationCustom02">
+			<div class="invalid-feedback">Last name required!</div>
+		</div>
+
+	
+		<div class="email-input col" >
+			<label class="form-label" for= "email-input">Email Address</label>
+			<input type="email" id="email-input" class="form-control" placeholder="xyz@gmail.com" required id="validationCustom03">
+			<div class="invalid-feedback">Email Required!</div>
+		</div>
+
+</div>
+		
+	<div class="row">
+		<div class="college-input col"  >
+			<label for="college-input" for ="college-input" class="form-label">College</label>
+			<input type="text" id="college-input" class="form-control" placeholder="College" aria-label="Username" required>
+			<div class="invalid-feedback">Please Provide a valid College</div>
+		</div>
+		
+	
+
+<div class="form-label col"  >
+	<label for="grad-year-select"  class="form-label"  >Graduation Year</label>
+    <select class="form-select" required aria-label="select example" id = "grad-year-select">
+      <option value="">Choose...</option>
+      <option value="1">2020</option>
+      <option value="2">2021</option>
+      <option value="3">2022</option>
+	  <option value="4">2023</option>
+		 
+    </select>
+    <div class="invalid-feedback">Please select a valid Graduation year..</div>
+  </div>
+
+
+		
+	<div class="form-label col"  >
+		<label for="roll-no-input" for ="roll-no-input" class="form-label">Roll No.</label>
+		<input type="text" class="form-control" id="roll-no-input" placeholder="Roll No." aria-label="Username" required>
+		<div class="invalid-feedback">Please Provide a valid Roll no.</div>
+	</div>
+		
+
+		
+
+<div class="conditions-checkbox"  >
+  <input class="form-check-input" id="conditions-checkbox" type="checkbox" id="box" required>
+  <label class="form-check-label" for = "conditions-checkbox">Agree to terms and conditions</label>
+  <div class="invalid-feedback" for="aggree">You must agree before submitting.</div>
+</div>
+
+	
+   
+
+<div class="boxxx" >
+    <button type="submit" class="btn btn-primary">Submit Form</button>
+	
+  </div>
+</div>
+	
+
+	</form>	
+
+
+	
+	
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
